--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Moritz Valentino Donatello Matzner</h1>
-        <h3>Datenjournalist. Er/Ihn</h3>
+        <h3>(Daten)Journalist, Berlin</h3>
         {% if site.logo %}
         <img src="{{site.logo | relative_url}}" alt="Logo" />
       {% endif %}
