--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -53,3 +53,17 @@
        url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.ttf') format('truetype'),
        url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.svg#NotoSans') format('svg');
 }
+
+@font-face {
+  font-family: 'IBM Plex Mono';
+  font-weight: 700;
+  font-style: italic;
+  src: url('../fonts/IBM-Plex-Mono-700italic/IBM-Plex-Mono-700italic.eot');
+  src: url('../fonts/IBM-Plex-Mono-700italic/IBM-Plex-Mono-700italic.eot?#iefix') format('embedded-opentype'),
+       local('IBM Plex Mono Bold Italic'),
+       local('IBMPlexMono-BoldItalic'),
+       url('../fonts/IBM-Plex-Mono-700italic/IBM-Plex-Mono-700italic.woff2') format('woff2'),
+       url('../fonts/IBM-Plex-Mono-700italic/IBM-Plex-Mono-700italic.woff') format('woff'),
+       url('../fonts/IBM-Plex-Mono-700italic/IBM-Plex-Mono-700italic.ttf') format('truetype'),
+       url('../fonts/IBM-Plex-Mono-700italic/IBM-Plex-Mono-700italic.svg#IBMPlexMono') format('svg');
+}
