--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><span style="color: #C45A8B;">Moritz Valentino Donatello Matzner</span></h1>
-        <h3>(Daten)Journalist, Berlin</h3>
+        <h1><span style="color: #C92BED;">Moritz Valentino Donatello Matzner</span></h1>
+        <h3>(Data)Journalist, Berlin</h3>
         {% if site.logo %}
         <img src="{{site.logo | relative_url}}" alt="Logo" />
       {% endif %}
