--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><span style="color: #C92BED;">Moritz Valentino Donatello Matzner</span></h1>
+        <h1><span class="text-pink">Moritz Valentino Donatello Matzner</span></h1>
         <h3>(Data)Journalist, Berlin</h3>
         {% if site.logo %}
         <img src="{{site.logo | relative_url}}" alt="Logo" />
@@ -27,7 +27,7 @@
 
       </section>
       <footer>
-        <p> moritzvalentinomatzner@posteo.net | +49 178 495 2608 | signal: moritz.620 </p>
+        <p> moritz.matzner@posteo.net | signal: mvm.404 </p>
         <p> </p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
