--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,6 +2,74 @@
 ---
 
 @import "jekyll-theme-minimal";
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&family=Spectral:wght@400;700&family=Space+Grotesk:wght@400;700&display=swap");
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  src: url("../fonts/IBM_Plex_Mono/IBMPlexMono-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  src: url("../fonts/IBM_Plex_Mono/IBMPlexMono-Italic.ttf") format("truetype");
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  src: url("../fonts/IBM_Plex_Mono/IBMPlexMono-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  src: url("../fonts/IBM_Plex_Mono/IBMPlexMono-BoldItalic.ttf") format("truetype");
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+
+:root {
+  font-family: "IBM Plex Sans", sans-serif;
+}
+
+body {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 16.5px;
+}
+
+.font-sampler {
+  margin: 24px 0;
+  padding: 16px;
+  border: 1px dashed #ddd;
+}
+
+.font-sampler h3 {
+  margin-top: 0;
+}
+
+.font-sample {
+  margin: 12px 0 18px;
+}
+
+.font-plex-sans {
+  font-family: "IBM Plex Sans", sans-serif;
+}
+
+.font-spectral {
+  font-family: "Spectral", serif;
+}
+
+.font-space-grotesk {
+  font-family: "Space Grotesk", sans-serif;
+}
 
 :root {
   --mv-blue: #1F0BFB;
@@ -20,6 +88,16 @@
   text-decoration: underline !important;
   text-decoration-thickness: 1px;
   text-underline-offset: 3px;
+  font-weight: inherit;
+}
+
+.wrapper a[href^="http"] {
+  text-decoration: none !important;
+}
+
+.wrapper a[href^="http"]::after {
+  content: " ↗";
+  font-weight: inherit;
 }
 
 .wrapper a {
@@ -28,6 +106,7 @@
 
 .wrapper a:hover {
   background-color: var(--mv-link-hover-bg);
+  color: var(--mv-blue);
 }
 
 .text-blue { color: var(--mv-blue); }
