--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><span class="text-blue">Moritz Valentino Donatello Matzner</span></h1>
+        <h1><span class="text-purple">Moritz Valentino Donatello Matzner</span></h1>
         <h3>(Data)Journalist, Berlin</h3>
         {% if site.logo %}
         <img src="{{site.logo | relative_url}}" alt="Logo" class="logo-img" data-hover="{{ "/assets/img/logo_hover.png" | relative_url }}" />
