--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,73 +2,11 @@
 ---
 
 @import "jekyll-theme-minimal";
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&family=Spectral:wght@400;700&family=Space+Grotesk:wght@400;700&display=swap");
-
-@font-face {
-  font-family: "IBM Plex Mono";
-  src: url("../fonts/IBM_Plex_Mono/IBMPlexMono-Regular.ttf") format("truetype");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "IBM Plex Mono";
-  src: url("../fonts/IBM_Plex_Mono/IBMPlexMono-Italic.ttf") format("truetype");
-  font-weight: 400;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "IBM Plex Mono";
-  src: url("../fonts/IBM_Plex_Mono/IBMPlexMono-Bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "IBM Plex Mono";
-  src: url("../fonts/IBM_Plex_Mono/IBMPlexMono-BoldItalic.ttf") format("truetype");
-  font-weight: 700;
-  font-style: italic;
-  font-display: swap;
-}
-
-:root {
-  font-family: "IBM Plex Sans", sans-serif;
-}
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap");
 
 body {
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 16.5px;
-}
-
-.font-sampler {
-  margin: 24px 0;
-  padding: 16px;
-  border: 1px dashed #ddd;
-}
-
-.font-sampler h3 {
-  margin-top: 0;
-}
-
-.font-sample {
-  margin: 12px 0 18px;
-}
-
-.font-plex-sans {
-  font-family: "IBM Plex Sans", sans-serif;
-}
-
-.font-spectral {
-  font-family: "Spectral", serif;
-}
-
-.font-space-grotesk {
-  font-family: "Space Grotesk", sans-serif;
 }
 
 :root {
@@ -128,6 +66,19 @@ body {
 .hl-pink {
   color: var(--mv-pink);
   background-color: var(--mv-highlight);
+}
+
+.project-card {
+  border: 1px solid rgba(0, 0, 0, 0.08);
+  padding: 16px 18px;
+  margin: 18px 0;
+  background: rgba(255, 255, 255, 0.85);
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.04);
+}
+
+.caption-12 {
+  font-size: 12px;
+  text-align: right;
 }
 
 .tabs {
