--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,7 +12,7 @@ body {
 :root {
   --mv-blue: #1F0BFB;
   --mv-purple: #682BED;
-  --mv-pink: #C92BED;
+  --mv-pink: #682BED;
   --mv-highlight: #FAF9F6;
   --mv-link-hover-bg: var(--mv-highlight);
 }
