--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <h1><span class="text-purple">Moritz Valentino Matzner</span></h1>
         <h3>(Data) Journalist, Berlin</h3>
         {% if site.logo %}
-        <img src="{{site.logo | relative_url}}" alt="Logo" class="logo-img" data-hover="{{ "/assets/img/logo_hover.png" | relative_url }}" />
+        <img src="{{site.logo | relative_url}}" alt="Logo" class="logo-img" | relative_url }}" />
       {% endif %}
       </header>
       <section>
